test/inductive/structure/reject_missing_param.qdt
structure T (A : Type) where
  (val : T)

